Add build logic in pom file