@@ -1,4 +1,7 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>dev.dutta-abhijit.hashnode</groupId>
@@ -15,28 +18,24 @@
     <scala.version>2.12.15</scala.version>
     <scala.short.version>2.12</scala.short.version>
     <scalast.version>3.2.10</scalast.version>
+    <hadoop.version>3.3.1</hadoop.version>
+    <scoverage.plugin.version>1.4.11</scoverage.plugin.version>
     <encoding>UTF-8</encoding>
-    <skipTests>True</skipTests>
+<!--    <skipTests>True</skipTests>-->
   </properties>
 
 
-  <!--
-    <repositories>
-      <repository>
-        <id>scala-tools.org</id>
-        <name>Scala-Tools Maven2 Repository</name>
-        <url>http://scala-tools.org/repo-releases</url>
-      </repository>
-    </repositories>
-
-    <pluginRepositories>
-      <pluginRepository>
-        <id>scala-tools.org</id>
-        <name>Scala-Tools Maven2 Repository</name>
-        <url>http://scala-tools.org/repo-releases</url>
-      </pluginRepository>
-    </pluginRepositories>
-  -->
+  <repositories>
+    <repository>
+      <id>central</id>
+      <name>Maven Central Repository</name>
+      <url>https://repo.maven.apache.org/maven2/</url>
+    </repository>
+    <repository>
+      <id>aws-glue-etl-artifacts</id>
+      <url>https://aws-glue-etl-artifacts.s3.amazonaws.com/release/</url>
+    </repository>
+  </repositories>
 
 <!--  <dependencyManagement>-->
 <!--    <dependencies>-->
@@ -79,8 +78,6 @@
       <scope>provided</scope>
     </dependency>
 
-
-    <!-- Test -->
     <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_${scala.short.version}</artifactId>
@@ -88,47 +85,148 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-client</artifactId>
+      <scope>compile</scope>
+      <version>${hadoop.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-common</artifactId>
+      <scope>compile</scope>
+      <version>${hadoop.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-aws</artifactId>
+      <scope>provided</scope>
+      <version>${hadoop.version}</version>
+    </dependency>
+
   </dependencies>
 
   <build>
     <sourceDirectory>src/main/scala</sourceDirectory>
     <testSourceDirectory>src/test/scala</testSourceDirectory>
-<!--    <plugins>-->
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.2.0</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.7</version>
+        <configuration>
+          <skipTests>true</skipTests>
+<!--          <useFile>false</useFile>-->
+<!--          <disableXmlReport>true</disableXmlReport>-->
+          <!-- If you have classpath issue like NoDefClassError,... -->
+          <!-- useManifestOnlyJar>false</useManifestOnlyJar -->
+<!--          <includes>-->
+<!--            <include>**/*Test.*</include>-->
+<!--            <include>**/*Suite.*</include>-->
+<!--          </includes>-->
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>11</source>
+          <target>11</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.scalatest</groupId>
+        <artifactId>scalatest-maven-plugin</artifactId>
+        <version>2.0.2</version>
+        <configuration>
+          <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+          <junitxml>.</junitxml>
+          <filereports>TestSuite.txt</filereports>
+          <argLine>-Xmx512m -XX:MaxPermSize=128m</argLine>
+        </configuration>
+        <executions>
+          <execution>
+            <id>test</id>
+            <goals>
+              <goal>test</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.scoverage</groupId>
+        <artifactId>scoverage-maven-plugin</artifactId>
+        <version>${scoverage.plugin.version}</version>
+        <configuration>
+          <scalaVersion>${scala.version}</scalaVersion>
+          <aggregate>true</aggregate>
+          <minimumCoverage>70</minimumCoverage>
+          <failOnMinimumCoverage>true</failOnMinimumCoverage>
+          <additionalForkedProjectProperties>skipTests=false</additionalForkedProjectProperties>
+        </configuration>
+        <executions>
+          <execution>
+            <id>scoverage-postcompile</id>
+            <goals>
+              <goal>post-compile</goal>
+            </goals>
+            <configuration>
+              <skip>true</skip>
+            </configuration>
+          </execution>
+          <execution>
+            <id>scoverage-report</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.scalastyle</groupId>
+        <artifactId>scalastyle-maven-plugin</artifactId>
+        <version>1.0.0</version>
+        <configuration>
+          <verbose>false</verbose>
+          <failOnViolation>false</failOnViolation>
+          <includeTestSourceDirectory>true</includeTestSourceDirectory>
+          <failOnWarning>false</failOnWarning>
+          <sourceDirectory>${project.basedir}/src/main/scala</sourceDirectory>
+          <includeTestSourceDirectory>${project.basedir}/src/test/scala</includeTestSourceDirectory>
+          <configLocation>${project.basedir}/scalastyle-config.xml</configLocation>
+          <outputFile>${project.basedir}/target/scalastyle-output.xml</outputFile>
+          <outputEncoding>UTF-8</outputEncoding>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 <!--      <plugin>-->
-<!--        <groupId>org.scala-tools</groupId>-->
-<!--        <artifactId>maven-scala-plugin</artifactId>-->
-<!--        <version>2.15.0</version>-->
+<!--        <groupId>net.alchim31.maven</groupId>-->
+<!--        <artifactId>scala-maven-plugin</artifactId>-->
+<!--        <version>4.5.6</version>-->
 <!--        <executions>-->
 <!--          <execution>-->
 <!--            <goals>-->
 <!--              <goal>compile</goal>-->
 <!--              <goal>testCompile</goal>-->
 <!--            </goals>-->
-<!--            <configuration>-->
-<!--              <args>-->
-<!--                <arg>-make:transitive</arg>-->
-<!--                <arg>-dependencyfile</arg>-->
-<!--                <arg>${project.build.directory}/.scala_dependencies</arg>-->
-<!--              </args>-->
-<!--            </configuration>-->
 <!--          </execution>-->
 <!--        </executions>-->
 <!--      </plugin>-->
-<!--      <plugin>-->
-<!--        <groupId>org.apache.maven.plugins</groupId>-->
-<!--        <artifactId>maven-surefire-plugin</artifactId>-->
-<!--        <version>2.7</version>-->
-<!--        <configuration>-->
-<!--          <useFile>false</useFile>-->
-<!--          <disableXmlReport>true</disableXmlReport>-->
-<!--          &lt;!&ndash; If you have classpath issue like NoDefClassError,... &ndash;&gt;-->
-<!--          &lt;!&ndash; useManifestOnlyJar>false</useManifestOnlyJar &ndash;&gt;-->
-<!--          <includes>-->
-<!--            <include>**/*Test.*</include>-->
-<!--            <include>**/*Suite.*</include>-->
-<!--          </includes>-->
-<!--        </configuration>-->
-<!--      </plugin>-->
-<!--    </plugins>-->
+    </plugins>
   </build>
 </project>
